--- a/boopMobile-updated repo/src/app/pages/pets/pets.page.scss
+++ b/boopMobile-updated repo/src/app/pages/pets/pets.page.scss
@@ -1,3 +1,30 @@
+.topbar{
+    width: 100%;
+    margin: 0 auto;
+
+    .titlecont{
+        width: 70%;
+        height: 100%;
+        margin: auto;
+
+        .title{
+            margin: 0 auto;
+            font-size: 7vw;
+        }
+    }
+
+    .buttoncont{
+        width: 30%;
+        height: 100%;
+        margin: 0 auto;
+        padding-left: 45px;
+
+        .btn{
+            --box-shadow: none;
+        }
+    }
+}
+
 .pet-card{
 
     width: 100%;
