--- a/boopMobile-updated repo/src/app/pages/pets/petreg/petreg.page.html
+++ b/boopMobile-updated repo/src/app/pages/pets/petreg/petreg.page.html
@@ -1,14 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-button color="light" (click)="dismissRegister()">Close</ion-button>
-    <ion-title>Register</ion-title>
+    <ion-row>
+      <div class="titlecont">
+        <ion-title class="title">Add Pet</ion-title>
+      </div>
+      <div class="btncont">
+        <ion-button class="btn" color="transparent" (click)="dismissRegister()">
+          <ion-icon name="close" color="danger" style="font-size: 32px;"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
-<ion-content padding>
+<ion-content>
   <form #form="ngForm" (ngSubmit)="register(form)" method="post">
-    <ion-item>
-      <button ion-button (click)="uploadFile()">Upload File</button>
-    </ion-item>
+    <ion-row class="form-row">
+      <ion-label position="floating">Upload Image</ion-label>
+      <div class="image-cont">
+        <ion-button class="btn" (click)="uploadFile()">
+          <ion-icon name="images" style="font-size: 124px;"></ion-icon>
+        </ion-button>
+      </div>
+    </ion-row>
 
     <ion-item>
       <ion-label position="floating">Pet Name</ion-label>
