--- a/boopMobile-updated repo/src/app/pages/pets/pets.page.html
+++ b/boopMobile-updated repo/src/app/pages/pets/pets.page.html
@@ -6,7 +6,7 @@
       </div>
       <div class="buttoncont">
         <ion-button class="btn" slot="end" fill="clear">
-          <ion-icon name="arrow-back" color="light"></ion-icon>
+          <ion-icon name="arrow-back" color="light" style="font-size: 32px;"></ion-icon>
         </ion-button>
       </div>
     </ion-row>
